
BATCH2D: Include 'smear' exposures when generating list of output files.
            (Not doing this caused a crash for plates w/ only smears).
QUICKTRACE: Reverted to doing full trace for flats.  Time saving by only 
           tracing part of the flat image introduces a risk not worth the gain.
TRACE320CRUDE:  Fix bug dependent on invvar being set.
               Small change to note number of goodrows in xmask, non-critical

In specflat:
specflat.table: Added "Flavor=Linux"

-------------------------------------------------------------------------------
v4_9_4 (Feb 28, 2002 idlspec2d+idlutils) running on IDL 5.3 - 5.5
Built against specflat v1_3.

More development of 2D.
Minor bug fixes for SOS.
Runnable version for P-1D.

APOREDUCE: Check how full the disks are for both the input files (sdR images),
            and the outputs.  Issue a warning message if either is >95% full.
ATVRAWSPEC: Display a 2D spectroscopic image with bad columns marked in red.
            This is useful to see that all bad columns have been masked,
            especially when looking at the 2D pixel flats.
BATCH1D,BATCH2D: Look for the parameter file batch1d.par,batch2d.par
            in the TOPDIR directory rather than reading environment
            variables $BATCH1DFILE,$BATCH2DFILE.
CREATE_LINESTRUCT(): Function broken out of LINEBACKFIT so that it
            can be called by SPECLINEFIT.
EXTRACT_OBJECT: Added call to skyline_dispersion (for increasing the
            instrumental response width to agree with the width of sky
            lines), but correction is not implemented because the measurement
            appears to be very noisy. Check invvar with whopping fibers.
FINDOPFILE: Find the op file corresponding to a specified MJD.
            This function is broken out of SDSSPROC so that it can
            be used by other procs (like ATVRAWSPEC).
FITDISPERSION: Mask regions not neighboring lines of interest.
            Simplifies extraction of line widths.